--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/EditBaoGia.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/EditBaoGia.cshtml
@@ -325,6 +325,7 @@
         </div>
         <div class="col-md-12">
             <button type="button" class="btn btn-default" ng-click="SaveBaoGia()">Lưu</button>
+            <button type="button" class="btn btn-default" ng-click="Copy()">Tạo báo giá mới từ báo giá hiện tại</button>
         </div>
     </div>
 </div>
